# notifica

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  settings.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
notifica/: __init__.py  admin.py  app.py  base.py  classes.py  consumers.py  forms.py  models.py  print_r.py  routing.py  settings.py  signals.py  ultils.py  urls.py  views.py  wsgi.py
notifica/migrations/: 0001_initial.py  0002_activity_participate.py  0002_auto_20170711_1738.py  0002_auto_20170908_0052.py  0003_auto_20170516_0349.py  0003_auto_20170908_0116.py  0003_org_member.py  0004_auto_20170714_0546.py  0004_auto_20170910_1037.py
notifica/static/js/: main.js  ws.js
notifica/static/notifica/: main.js  notify-client.js  notify_client.js  ws.js
notifica/templates/: base.html
notifica/templates/home/: home.html  index.html
notifica/templates/member/: update_organization.html
notifica/templates/member_position/: update.html
notifica/templates/registration/: logged_out.html  login.html
notifica/templates/update/: update_user.html
project/: __init__.py  admin.py  app.py  models.py  settings.py  urls.py  views.py  wsgi.py
project/migrations/: 0001_initial.py  0002_auto_20170908_0052.py  0003_auto_20170908_0116.py  0004_auto_20170910_1037.py  0005_auto_20210129_0224.py
static/notifica/: ws.js
templates/chat/: index.html
templates/registration/: login.html
templates/test/: index.html
tests/: test_db.py
(+1 files in other folders)
